--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
     "bitcoin-script": "^0.1.1",
-    "blake2b": "^2.1.2",
+    "blake2b": "https://github.com/BitGo/blake2b#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
     "bs58check": "^2.0.0",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
